--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,8 +7,8 @@
 
 </head>
 <body>
-<form action="/student/login" method="post">
-    用户名：<input type="text" name="sname"><br/>
+<form action="/student/toLogin" method="post" >
+   用户名：<input type="text" name="sname"><br/>
     密码：<input type="text" name="spassword"><br/>
     <input type="submit" value="登录">
     <button onclick="del()"></button>
@@ -16,5 +16,9 @@
 <span th:text="'working web application'"></span><br>
 <span th:text="2013 + 2"></span><br>
 <input type="text" name="userName" value="e-learn" th:value="111111" /><br>
+<!--<input type="file" name="file">
+    <input type="submit" value="提交">-->
+</form>
+${msg}
 </body>
 </html>
