--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,24 +1,49 @@
+﻿<html>
 <!DOCTYPE html>
-<html lang="en">
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="en" class="no-js">
 
-</head>
-<body>
-<form action="/student/toLogin" method="post" >
-   用户名：<input type="text" name="sname"><br/>
-    密码：<input type="text" name="spassword"><br/>
-    <input type="submit" value="登录">
-    <button onclick="del()"></button>
-</form>
-<span th:text="'working web application'"></span><br>
-<span th:text="2013 + 2"></span><br>
-<input type="text" name="userName" value="e-learn" th:value="111111" /><br>
-<!--<input type="file" name="file">
-    <input type="submit" value="提交">-->
-</form>
-${msg}
-</body>
+    <head>
+
+        <meta charset="utf-8">
+        <title>登录(Login)</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="/css/reset.css">
+        <link rel="stylesheet" href="/css/style.css">
+
+        <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+            <script src="/js/html5.js"></script>
+        <![endif]-->
+<style>
+    body{
+        background-image: url("/img/3.jpg"); background-repeat:repeat-y;
+    }
+</style>
+    </head>
+
+    <body>
+
+        <div class="page-container">
+            <h1>登录(Login)</h1>
+            <form action="/student/toLogin" method="post">
+                <input type="text" name="sname" class="username" placeholder="请输入您的用户名！">
+                <input type="password" name="spassword" class="password" placeholder="请输入您的用户密码！">
+                <input type="Captcha" class="Captcha" name="Captcha" placeholder="请输入验证码！">
+                <button type="submit" class="submit_button">登录</button>
+                <div class="error"><span>+</span></div>
+            </form>
+        </div>
+		
+        <!-- Javascript -->
+        <script src="/js/jquery-1.8.2.min.js" ></script>
+        <script src="/js/supersized.3.2.7.min.js" ></script>
+        <script src="/js/supersized-init.js" ></script>
+        <script src="/js/scripts.js" ></script>
+
+    </body>
 </html>
+
