--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -174,7 +174,7 @@
     <div id="iframe_box" class="Hui-article">
         <div class="show_iframe">
             <div style="display:none" class="loading"></div>
-            <iframe scrolling="yes" frameborder="0" src="../static/welcome.html"></iframe>
+            <iframe scrolling="yes" frameborder="0" src="../static/welcome1.html"></iframe>
         </div>
     </div>
 </section>
