--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
         <![endif]-->
 <style>
     body{
-        background-image: url("/img/3.jpg"); background-repeat:repeat-y;
+        background-image: url("/img/backbg.jpg"); background-repeat:repeat-y;
     }
 </style>
     </head>
