--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -175,6 +175,7 @@ button:active {
 .connect a:hover { background-position: center bottom; }
 
 /*－－－增加部份的CSS－－－*/
-form,input,button{font-family:Microsoft YaHei,Segoe UI,Tahoma,Arial,Verdana,sans-serif; text-decoration:none; width:100%;}
+form,input,button,select{font-family:Microsoft YaHei,Segoe UI,Tahoma,Arial,Verdana,sans-serif; text-decoration:none; width:100%;}
 button.submit_button{ font-size:24px; letter-spacing:15px;}
 input.Captcha{ width:130px; float:left;}
+select{ width:130px;height: 40px; float:right;margin-top: 25px; border-radius: 2px;}
